--- a/Frontend/views/pages/index.hbs
+++ b/Frontend/views/pages/index.hbs
@@ -32,15 +32,21 @@ layout: default
                     <div class="panel panel-default">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                             <div class="panel-heading clearfix" role="tab" id="proposta1">
-                                <h4 class="panel-title pull-left">
-                                    <strong>Esporte e Arte como forma de educação</strong>
-                                </h4>
-                                <div class="sprite icon-bottom pull-right"></div>
+                                <div class="row">
+                                    <div class="col-xs-10">
+                                        <h4 class="panel-title text-left pull-left">
+                                            <strong>Esporte e Arte como forma de educação</strong>
+                                        </h4>
+                                    </div>
+                                    <div class="col-xs-2">
+                                        <div class="sprite icon-bottom pull-right"></div>
+                                    </div>
+                                </div>
                             </div>
                         </a>
                         <div id="collapseOne" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="headingOne">
                             <div class="panel-body ft-white">
-                                <ol class="lista-proposta" align="justify">
+                                <ol class="lista-proposta text-left">
                                     <li>Lutar pela criação do Complexo Esportivo Municipal;</li>
                                     <li>Incentivar o incremento do Programa PROESPORTE e fiscalizá-lo;</li>
                                     <li>Buscar melhoras na segurança dos espaços públicos;</li>
@@ -53,15 +59,21 @@ layout: default
                     <div class="panel panel-default">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                             <div class="panel-heading clearfix" role="tab" id="proposta2">
-                                <h4 class="panel-title pull-left">
-                                    <strong>Educação</strong>
-                                </h4>
-                                <div class="sprite icon-bottom pull-right"></div>
+                                <div class="row">
+                                    <div class="col-xs-10">
+                                        <h4 class="panel-title text-left pull-left">
+                                            <strong>Educação</strong>
+                                        </h4>
+                                    </div>
+                                    <div class="col-xs-2">
+                                        <div class="sprite icon-bottom pull-right"></div>
+                                    </div>
+                                </div>
                             </div>
                         </a>
                         <div id="collapseTwo" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="headingTwo">
                             <div class="panel-body ft-white">
-                                <ol class="lista-proposta" align="justify">
+                                <ol class="lista-proposta text-left">
                                     <li>Lutar pela Educação em tempo integral (segundo turno escolar) com incentivo a atividades extra classes e alimentação;</li>
                                     <li>Fomentar parcerias entre a Prefeitura de Pelotas e as Universidades locais, reduzindo a distância entre tais instituições, ao exemplo de fortalecimento de programas de estágios e pesquisas, além de projetos de ensino e extensão.</li>
                                 </ol>
@@ -71,15 +83,21 @@ layout: default
                     <div class="panel panel-default">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                             <div class="panel-heading clearfix" role="tab" id="proposta3">
-                                <h4 class="panel-title pull-left">
-                                    <strong>Social e Comunitário</strong>
-                                </h4>
-                                <div class="sprite icon-bottom pull-right"></div>
+                                <div class="row">
+                                    <div class="col-xs-10">
+                                        <h4 class="panel-title text-left pull-left">
+                                            <strong>Social e Comunitário</strong>
+                                        </h4>
+                                    </div>
+                                    <div class="col-xs-2">
+                                        <div class="sprite icon-bottom pull-right"></div>
+                                    </div>
+                                </div>
                             </div>
                         </a>
                         <div id="collapseThree" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="headingThree">
                             <div class="panel-body ft-white">
-                                <ol class="lista-proposta" align="justify">
+                                <ol class="lista-proposta text-left">
                                     <li>Ações de combate a intolerância religiosa e todo o tipo de discriminação;</li>
                                     <li>Projetos em ação com as comunidades, através do incentivo ao regime de mutirões, fortalecendo as associações de bairros e parceria entre a comunidade e o poder público.</li>
                                 </ol>
@@ -89,15 +107,21 @@ layout: default
                     <div class="panel panel-default">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                             <div class="panel-heading clearfix" role="tab" id="proposta4">
-                                <h4 class="panel-title pull-left">
-                                    <strong>Sustentabilidade, Meio Ambiente e Desenvolvimento</strong>
-                                </h4>
-                                <div class="sprite icon-bottom pull-right"></div>
+                                <div class="row">
+                                    <div class="col-xs-10">
+                                        <h4 class="panel-title text-left pull-left">
+                                            <strong>Sustentabilidade, Meio Ambiente e Desenvolvimento</strong>
+                                        </h4>
+                                    </div>
+                                    <div class="col-xs-2">
+                                        <div class="sprite icon-bottom pull-right"></div>
+                                    </div>
+                                </div>
                             </div>
                         </a>
                         <div id="collapseFour" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="collapseFour">
                             <div class="panel-body ft-white">
-                                <ol class="lista-proposta" align="justify">
+                                <ol class="lista-proposta text-left">
                                     <li>Apoio as fontes de energia sustentáveis (inclusive na iluminação pública e órgãos municipais);</li>
                                     <li>Conscientização e incentivo aos processos de seleção, separação e reciclagem do lixo, com base em projetos de sustentabilidade a curto e longo prazo;</li>
                                     <li>Fortalecimento de associações de coletas e segregação de materiais recicláveis em cada bairro, apoiando cooperativas do ramo;</li>
@@ -110,15 +134,21 @@ layout: default
                     <div class="panel panel-default">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                             <div class="panel-heading clearfix" role="tab" id="proposta5">
-                                <h4 class="panel-title pull-left">
-                                    <strong>Apoio e valorização das potencialidades da colônia</strong>
-                                </h4>
-                                <div class="sprite icon-bottom pull-right"></div>
+                                <div class="row">
+                                    <div class="col-xs-10">
+                                        <h4 class="panel-title text-left pull-left">
+                                            <strong>Apoio e valorização das potencialidades da colônia</strong>
+                                        </h4>
+                                    </div>
+                                    <div class="col-xs-2">
+                                        <div class="sprite icon-bottom pull-right"></div>
+                                    </div>
+                                </div>
                             </div>
                         </a>
                         <div id="collapseFive" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="headingFive">
                             <div class="panel-body ft-white">
-                                <ol class="lista-proposta" align="justify">
+                                <ol class="lista-proposta text-left">
                                     <li>Fortalecer o incentivo da prefeitura a produção agrícola local;</li>
                                     <li>Propor o fundo de incentivo à produção rural, para os pequenos agricultores, a fim de reduzir o êxodo rural;</li>
                                     <li>Apoio e incentivo ao fortalecimento do turismo e esporte colonial, a partir da utilização do Fundo Municipal do Turismo (a ser criado);</li>
@@ -131,15 +161,21 @@ layout: default
                     <div class="panel panel-default">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
                             <div class="panel-heading clearfix" role="tab" id="proposta6">
-                                <h4 class="panel-title pull-left">
-                                    <strong>Empreendedorismo e geração de renda</strong>
-                                </h4>
-                                <div class="sprite icon-bottom pull-right"></div>
+                                <div class="row">
+                                    <div class="col-xs-10">
+                                        <h4 class="panel-title text-left pull-left">
+                                            <strong>Empreendedorismo e geração de renda</strong>
+                                        </h4>
+                                    </div>
+                                    <div class="col-xs-2">
+                                        <div class="sprite icon-bottom pull-right"></div>
+                                    </div>  
+                                </div>
                             </div>
                         </a>
                         <div id="collapseSix" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="headingSix">
                             <div class="panel-body ft-white">
-                                <ol class="lista-proposta" align="justify">
+                                <ol class="lista-proposta text-left">
                                     <li>Propor ações de estímulo ao empreendedorismo, com incentivo aos registros dos microempreendedores individuais, reduzindo ainda mais o mercado informal;</li>
                                     <li>Fomentar o incentivo do setor industrial.</li>
                                 </ol>
@@ -149,15 +185,21 @@ layout: default
                     <div class="panel panel-default">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
                             <div class="panel-heading clearfix" role="tab" id="proposta7">
-                                <h4 class="panel-title pull-left">
-                                    <strong>Serviço Público de Qualidade</strong>
-                                </h4>
-                                <div class="sprite icon-bottom pull-right"></div>
+                                <div class="row">
+                                    <div class="col-xs-10">
+                                        <h4 class="panel-title text-left pull-left">
+                                            <strong>Serviço Público de Qualidade</strong>
+                                        </h4>
+                                    </div>
+                                    <div class="col-xs-2">
+                                        <div class="sprite icon-bottom pull-right"></div>
+                                    </div>
+                                </div>
                             </div>
                         </a>
                         <div id="collapseSeven" class="panel-collapse collapse bg-grey" role="tabpanel" aria-labelledby="headingSeven">
                             <div class="panel-body ft-white">
-                                <ol class="lista-proposta" align="justify">
+                                <ol class="lista-proposta text-left">
                                     <li>Lutar pelo funcionalismo público, com postura contrária, a qualquer tipo de privatização, inclusive do SANEP;</li>
                                     <li>Lutar pela criação de uma auditoria interna, com sistema de compliance, tanto para a Câmara quanto para o Executivo Municipal.</li>
                                 </ol>
@@ -187,16 +229,7 @@ layout: default
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="container-video">
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="container-video">
                         <iframe class="embed-responsive-item" src="//www.youtube.com/embed/cWyGu0qwaVk"
-                        allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" msallowfullscreen="msallowfullscreen" oallowfullscreen="oallowfullscreen" webkitallowfullscreen="webkitallowfullscreen"></iframe>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="container-video">
-                        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/ePbKGoIGAXY"
                         allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" msallowfullscreen="msallowfullscreen" oallowfullscreen="oallowfullscreen" webkitallowfullscreen="webkitallowfullscreen"></iframe>
                     </div>
                 </div>
