--- a/Frontend/assets/styl/style.styl
+++ b/Frontend/assets/styl/style.styl
@@ -1,4 +1,14 @@
 @import 'nib'
+@media screen and (min-width 1000px)
+	.embed-responsive-item
+		height 350px !important
+	.slider-img 
+		height 94vh !important
+
+@media screen and (max-width 999px)
+	.slider-img 
+		height 44vh !important
+		
 .propostas
 	background-color #dcdcdc
 
@@ -7,9 +17,6 @@
 
 .ft-white
 	color #fff !important
-
-.slider-img
-	min-width: 100%
 
 .panel-body
 	padding-top: 0
