--- a/Frontend/views/pages/index.hbs
+++ b/Frontend/views/pages/index.hbs
@@ -9,7 +9,7 @@ layout: default
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Danilo Rodrigues</h2>
                 <hr class="light center-block">
-                <p class="text-faded">Sou bancário concursado pelo Banrisul, tenho 27 anos, casado e pai de dois filhos. Possuo formação em Educação Física e Mestrado, ambos pela UFPel. Moro no Fragata e tive grande parte da minha infância vivida na zona do Porto e com muito envolvimento na colônia de Pelotas. Fui artista circense e professor no grupo Tholl, coordenei projetos artísticos junto à UFPel e fui instrutor de artes no SESI. Coordenei o Programa de Ginástica Laboral da Prefeitura de Pelotas, com parcerias entre as instituições UFPel e Prefeitura. Hoje me proponho a ser teu representante na câmara municipal.<br><br><b><h3>“Não basta querer uma política melhor, é preciso lutar por ela!”</h3></b></p>
+                <p class="text-faded text-justify">Sou bancário concursado pelo Banrisul, tenho 27 anos, casado e pai de dois filhos. Possuo formação em Educação Física e Mestrado, ambos pela UFPel. Moro no Fragata e tive grande parte da minha infância vivida na zona do Porto e com muito envolvimento na colônia de Pelotas. Fui artista circense e professor no grupo Tholl, coordenei projetos artísticos junto à UFPel e fui instrutor de artes no SESI. Coordenei o Programa de Ginástica Laboral da Prefeitura de Pelotas, com parcerias entre as instituições UFPel e Prefeitura. Hoje me proponho a ser teu representante na câmara municipal.<br><br><b><h3>“Não basta querer uma política melhor, é preciso lutar por ela!”</h3></b></p>
                 <!--<a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>-->
             </div>
         </div>
@@ -215,19 +215,25 @@ layout: default
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter">
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-6 col-sm-6">
+                    <div class="container-video">
+                        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/vxFgfmba9zY"
+                        allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" msallowfullscreen="msallowfullscreen" oallowfullscreen="oallowfullscreen" webkitallowfullscreen="webkitallowfullscreen"></iframe>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-sm-6">
+                    <div class="container-video">
+                        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/rOw9R7HX3ao"
+                        allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" msallowfullscreen="msallowfullscreen" oallowfullscreen="oallowfullscreen" webkitallowfullscreen="webkitallowfullscreen"></iframe>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-sm-6">
                     <div class="container-video">
                         <iframe class="embed-responsive-item" src="//www.youtube.com/embed/QWMOtoLUx64"
                         allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" msallowfullscreen="msallowfullscreen" oallowfullscreen="oallowfullscreen" webkitallowfullscreen="webkitallowfullscreen"></iframe>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="container-video">
-                        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/cWyGu0qwaVk"
-                        allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" msallowfullscreen="msallowfullscreen" oallowfullscreen="oallowfullscreen" webkitallowfullscreen="webkitallowfullscreen"></iframe>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-6 col-sm-6">
                     <div class="container-video">
                         <iframe class="embed-responsive-item" src="//www.youtube.com/embed/cWyGu0qwaVk"
                         allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" msallowfullscreen="msallowfullscreen" oallowfullscreen="oallowfullscreen" webkitallowfullscreen="webkitallowfullscreen"></iframe>
@@ -236,12 +242,3 @@ layout: default
             </div>
         </div>
     </section>
-
-    <aside class="bg-dark">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a>
-            </div>
-        </div>
-    </aside>
