--- a/Frontend/assets/styl/sprite.styl
+++ b/Frontend/assets/styl/sprite.styl
@@ -33,3 +33,14 @@ Icon classes can be used entirely standalone. They are named after their origina
   width: 22px;
   height: 15px;
 }
+
+.img-contato{
+    width: 3em;
+    cursor: pointer;
+    margin-bottom: 2px;
+}
+
+.fone{
+    cursor:pointer;
+    margin-bottom: 2px;
+}
