--- a/Frontend/materials/partials/navegation.hbs
+++ b/Frontend/materials/partials/navegation.hbs
@@ -5,7 +5,7 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Danilo Rodrigues</a>
+            <a class="navbar-brand page-scroll" href="#page-top">Danilo Rodrigues 15015</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -18,7 +18,7 @@
                     <a class="page-scroll" href="#services">Propostas</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#portfolio">Video</a>
+                    <a class="page-scroll" href="#portfolio">Videos</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contato</a>
