--- a/Frontend/assets/styl/style.styl
+++ b/Frontend/assets/styl/style.styl
@@ -23,3 +23,12 @@
 
 .lista-proposta
 	padding-right 3em
+
+.img-contato
+	width 3em
+	cursor pointer
+	margin-bottom 3px
+
+.fone
+	cursor pointer
+	margin-bottom 3px
