--- a/Frontend/materials/partials/contact.hbs
+++ b/Frontend/materials/partials/contact.hbs
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Contato</h2>
                 <hr class="primary center-block">
-                <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                <p>De todas as formas, ser o representante da renovação do quadro legislativo municipal com QUALIDADE, pautado na ética e postura digna, respeitando e valorizando as pessoas.</p>
             </div>
             <div class="col-lg-4 text-center">
                 <i class="fa fa-phone fa-3x sr-contact fone"></i>
