--- a/Frontend/materials/partials/contact.hbs
+++ b/Frontend/materials/partials/contact.hbs
@@ -8,11 +8,11 @@
             </div>
             <div class="col-lg-4 text-center">
                 <i class="fa fa-phone fa-3x sr-contact fone"></i>
-                <p>123-456-6789</p>
+                <p>(53) 8100-8288</p>
             </div>
             <div class="col-lg-4 text-center">
-                <img src="Content/img/gmail.png" class="img-responsive center-block img-contato">
-                <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                <i class="fa fa-envelope-o fa-3x sr-contact fone"></i>
+                <p><a href="mailto:danilo.optc@hotmail.com">danilo.optc@hotmail.com</a></p>
             </div>
             <div class="col-lg-4 text-center">
                 <img src="Content/img/facebook.png" class="img-responsive center-block img-contato">
