--- a/Frontend/assets/styl/style.styl
+++ b/Frontend/assets/styl/style.styl
@@ -8,7 +8,12 @@
 @media screen and (max-width 999px)
 	.slider-img
 		height 44vh !important
-
+.mt10
+	margin-top 10px
+	
+.ml15
+	margin-left 15px
+	
 .propostas
 	background-color #dcdcdc
 
@@ -32,3 +37,6 @@
 .fone
 	cursor pointer
 	margin-bottom 3px
+
+audio::-webkit-media-controls-panel
+	background-color #000
