--- a/Frontend/materials/partials/navegation.hbs
+++ b/Frontend/materials/partials/navegation.hbs
@@ -8,9 +8,12 @@
             </button>
             <a class="navbar-brand page-scroll" href="#page-top">Danilo Rodrigues 15015</a>
         </div>
-
+        <!-- <audio controls>
+            <source src="Content/jingle-campanha.mp3" type="audio/mpeg">
+        </audio> -->
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     <a class="page-scroll" href="#about">Sobre</a>
@@ -25,8 +28,16 @@
                     <a class="page-scroll" href="#contact">Contato</a>
                 </li>
             </ul>
+            <ul class="nav navbar-nav navbar-left">
+                <li class="mt10 ml15">
+                    <audio controls>
+                        <source src="Content/jingle-campanha.mp3" type="audio/mpeg">
+                    </audio>
+                </li>
+            </ul>
         </div>
         <!-- /.navbar-collapse -->
+
     </div>
     <!-- /.container-fluid -->
 </nav>
