--- a/Frontend/views/layouts/default.hbs
+++ b/Frontend/views/layouts/default.hbs
@@ -9,19 +9,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{this.title}}</title>
 
-  {{#if this.hasTgsOg}}
-
+  <!-- {{#if this.hasTgsOg}}
+  
     <meta property="og:image" content="{{this.ogImage}}"/>
     <meta property="og:title" content="{{this.ogTitle}}"/>
     <meta property="og:description" content="{{this.ogDescription}}"/>
     <meta property="og:url" content="{{this.ogUrl}}"/>
     <meta property="og:site_name" content="{{this.ogSiteName}}"/>
     <meta property="og:type" content="{{this.ogType}}"/>
+  
+  {{/if}} -->
 
-  {{/if}}
-
-  <meta name="keywords" content="">
-  <meta name="description" content="">
+  <meta name="keywords" content="Daniel Rodrigues, 15015, vereador, candidato, pmdb, pps"/>
+  <meta name="description" content="Não basta querer uma política melhor, é preciso lutar por ela!"/>
+  <meta name="robots" content="index"/>
 
   <link rel="stylesheet" href="Content/css/style.min.css">
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
