--- a/Frontend/views/pages/index.hbs
+++ b/Frontend/views/pages/index.hbs
@@ -9,7 +9,15 @@ layout: default
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Danilo Rodrigues</h2>
                 <hr class="light center-block">
-                <p class="text-faded text-justify">Sou bancário concursado pelo Banrisul, tenho 27 anos, casado e pai de dois filhos. Possuo formação em Educação Física e Mestrado, ambos pela UFPel. Moro no Fragata e tive grande parte da minha infância vivida na zona do Porto e com muito envolvimento na colônia de Pelotas. Fui artista circense e professor no grupo Tholl, coordenei projetos artísticos junto à UFPel e fui instrutor de artes no SESI. Coordenei o Programa de Ginástica Laboral da Prefeitura de Pelotas, com parcerias entre as instituições UFPel e Prefeitura. Hoje me proponho a ser teu representante na câmara municipal.<br><br><b><h3>“Não basta querer uma política melhor, é preciso lutar por ela!”</h3></b></p>
+                <p class="text-faded text-justify">Sou bancário concursado pelo Banrisul, tenho 27 anos, casado e pai de dois filhos. Possuo formação em Educação Física e Mestrado, ambos pela UFPel. Moro no Fragata e tive grande parte da minha infância vivida na zona do Porto e com muito envolvimento na colônia de Pelotas. Fui artista circense e professor no grupo Tholl, coordenei projetos artísticos junto à UFPel e fui instrutor de artes no SESI. Coordenei o Programa de Ginástica Laboral da Prefeitura de Pelotas, com parcerias entre as instituições UFPel e Prefeitura. Hoje me proponho a ser teu representante na câmara municipal.<br><br>
+                </p>
+
+                <h3> 
+                    <strong>
+                        “Não basta querer uma política melhor,<br> é preciso lutar por ela!”
+                    </strong>
+                </h3>
+                
                 <!--<a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>-->
             </div>
         </div>
