--- a/Frontend/materials/partials/contact.hbs
+++ b/Frontend/materials/partials/contact.hbs
@@ -11,12 +11,17 @@
                 <p>(53) 8100-8288</p>
             </div>
             <div class="col-lg-4 text-center">
-                <i class="fa fa-envelope-o fa-3x sr-contact fone"></i>
-                <p><a href="mailto:danilo.optc@hotmail.com">danilo.optc@hotmail.com</a></p>
+                <a href="mailto:danilo.optc@hotmail.com">
+                    <i class="fa fa-envelope-o fa-3x sr-contact fone"></i>
+                    <p>danilo.optc@hotmail.com</p>
+                </a>
             </div>
             <div class="col-lg-4 text-center">
-                <img src="Content/img/facebook.png" class="img-responsive center-block img-contato">
-                <p>Danilo Rodrigues</p>
+                <a href="https://www.facebook.com/rodrigues.danilo15/" target="_blank">
+                    <img src="Content/img/facebook.png" class="img-responsive center-block img-contato">
+
+                    <p>Danilo Rodrigues</p>
+                </a>
             </div>
         </div>
     </div>
