--- a/Frontend/views/layouts/default.hbs
+++ b/Frontend/views/layouts/default.hbs
@@ -7,6 +7,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="Content/img/logo_danilo.png" type="image/x-icon" />
   <title>{{this.title}}</title>
 
   <!-- {{#if this.hasTgsOg}}
