--- a/Frontend/assets/styl/style.styl
+++ b/Frontend/assets/styl/style.styl
@@ -17,8 +17,8 @@
 .propostas
 	background-color #dcdcdc
 
-.bg-grey
-	background-color grey !important
+.bg-blue
+	background-color #18405b !important
 
 .ft-white
 	color #fff !important
