--- a/Frontend/materials/partials/navegation.hbs
+++ b/Frontend/materials/partials/navegation.hbs
@@ -25,6 +25,9 @@
                     <a class="page-scroll" href="#portfolio">Videos</a>
                 </li>
                 <li>
+                    <a class="page-scroll" href="#map">Comitê</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#contact">Contato</a>
                 </li>
             </ul>
