--- a/Frontend/views/layouts/default.hbs
+++ b/Frontend/views/layouts/default.hbs
@@ -45,7 +45,8 @@
 
 	<script src="Content/js/plugins.min.js"></script>
 	<script src="Content/js/app.min.js"></script>
-
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4QPThlWYGA0XeZBcXAVw3k7lSlHeyoCc&callback=initMap"
+    async defer></script>
 
 </body>
 
