--- a/Frontend/views/pages/index.hbs
+++ b/Frontend/views/pages/index.hbs
@@ -250,3 +250,6 @@ layout: default
             </div>
         </div>
     </section>
+    <section class="comite" id="map">
+        
+    </section>
