--- a/Frontend/assets/styl/style.styl
+++ b/Frontend/assets/styl/style.styl
@@ -8,6 +8,8 @@
 @media screen and (max-width 999px)
 	.slider-img
 		height 44vh !important
+	#map 
+		height 320px !important
 .mt10
 	margin-top 10px
 	
@@ -40,3 +42,8 @@
 
 audio::-webkit-media-controls-panel
 	background-color #000
+
+#map 
+	height 400px
+	margin-top -5px
+	
