--- a/Frontend/assets/styl/style.styl
+++ b/Frontend/assets/styl/style.styl
@@ -8,14 +8,14 @@
 @media screen and (max-width 999px)
 	.slider-img
 		height 44vh !important
-	#map 
+	#map
 		height 320px !important
 .mt10
 	margin-top 10px
-	
+
 .ml15
 	margin-left 15px
-	
+
 .propostas
 	background-color #dcdcdc
 
@@ -43,7 +43,11 @@
 audio::-webkit-media-controls-panel
 	background-color #000
 
-#map 
+#map
 	height 400px
 	margin-top -5px
-	
+
+.logo
+	position absolute
+	z-index 1000
+	width 25%
