--- a/Frontend/materials/partials/navegation.hbs
+++ b/Frontend/materials/partials/navegation.hbs
@@ -6,14 +6,14 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Danilo Rodrigues 15015</a>
+            <a class="navbar-brand page-scroll" href="#page-top">Danilo Rodrigues</a>
         </div>
         <!-- <audio controls>
             <source src="Content/jingle-campanha.mp3" type="audio/mpeg">
         </audio> -->
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            
+
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     <a class="page-scroll" href="#about">Sobre</a>
@@ -44,6 +44,8 @@
     </div>
     <!-- /.container-fluid -->
 </nav>
+
+<img src="Content/img/vereadorLogo.png" class="img-responsive logo">
 <!--
 <header>
     <div class="header-content">
