--- a/Frontend/assets/styl/style.styl
+++ b/Frontend/assets/styl/style.styl
@@ -10,6 +10,21 @@
 		height 44vh !important
 	#map
 		height 320px !important
+	audio
+	::-webkit-media-controls-panel
+		background-color #fff !important
+	audio
+	::-moz-media-controls-panel
+		background-color #fff !important
+	audio
+	::-webkit-media-controls-volume-slider
+		background-color #dedede !important
+	audio
+	:-moz-media-controls-volume-slider
+		background-color #dedede !important
+	audio
+	::-moz-media-controls-volume-slider
+		background-color #dedede !important
 .mt10
 	margin-top 10px
 
@@ -30,7 +45,8 @@
 
 .lista-proposta
 	padding-right 3em
-
+	li 
+		font-size 1.1em
 .img-contato
 	width 3em
 	cursor pointer
@@ -40,8 +56,18 @@
 	cursor pointer
 	margin-bottom 3px
 
-audio::-webkit-media-controls-panel
+audio
+::-webkit-media-controls-panel
 	background-color #000
+audio
+::-moz-media-controls-panel
+	background-color #000
+audio
+::-webkit-media-controls-volume-slider
+	background-color #f1f1f1
+audio
+::-moz-media-controls-volume-slider
+	background-color #f1f1f1
 
 #map
 	height 400px
