layout marca e novas cores

--- a/Frontend/materials/partials/navegation.hbs
+++ b/Frontend/materials/partials/navegation.hbs
@@ -1,9 +1,9 @@
 <div class="complete"></div>
-<nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+<nav id="mainNav" class="navbar navbar-default navbar-fixed-top navegation">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle collapsed navegation" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
             <a class="navbar-brand page-scroll" href="#page-top">Danilo Rodrigues</a>
@@ -44,9 +44,19 @@
     </div>
     <!-- /.container-fluid -->
 </nav>
-
-<img src="Content/img/vereadorLogo.png" class="img-responsive logo">
+<div class="marca-slider pa ml15 mt10">
+    <p class="berlin fs20 color-vermelho text-center nomb mt10 vere">Vereador</p>
+    <p class="berlin fs30 color-azul text-center nomb mt-10 dan">DANILO</p>
+    <p class="berlin fs30 color-azul text-center nomb mt-10 dan rod">RODRIGUES</p>
+    <div class="mt-25 text-center">
+    <span class="berlin fs60 color-vermelho nomb num15">15</span>
+    <span class="berlin fs60 color-laranja nomb num15">0</span>
+    <span class="berlin fs60 color-vermelho nomb num15">15</span>
+</div>
+</div>
 <!--
+<img src="Content/img/vereadorLogo.png" class="img-responsive logo">
+
 <header>
     <div class="header-content">
         <div class="header-content-inner">
