--- a/Frontend/assets/styl/style.styl
+++ b/Frontend/assets/styl/style.styl
@@ -10,6 +10,33 @@
 		height 44vh !important
 	#map
 		height 320px !important
+	.marca-slider
+		height 80px !important
+		width 100px !important
+		margin-left 5px !important
+		margin-top 5px !important
+	.vere
+		font-size 12px !important
+		margin-bottom 5px !important
+		margin-top 5px !important
+	.dan
+		font-size 15px !important
+	.num15
+		font-size 25px !important
+	.rod
+		margin-bottom 12px !important
+
+	.navegation
+		background-color #222 !important
+		color white !important
+
+	.page-scroll
+		color white !important
+
+	.page-scroll:hover
+		color #999 !important
+
+/*
 	audio
 	::-webkit-media-controls-panel
 		background-color #fff !important
@@ -25,11 +52,69 @@
 	audio
 	::-moz-media-controls-volume-slider
 		background-color #dedede !important
-.mt10
-	margin-top 10px
+*/
+.nomb
+	margin-bottom 0
+
+.fs20
+	font-size 20px
+
+.fs30
+	font-size 30px
+
+.fs60
+	font-size 60px
+
+.color-laranja
+	color #f5841e
+
+.color-azul
+	color #1a405a
+
+.color-vermelho
+	color #ee4a24
+
+.mt-10
+	margin-top -10px
+
+.mt-25
+	margin-top -25px
 
 .ml15
 	margin-left 15px
+
+.ml70
+	margin-left 70px
+
+.ml113
+	margin-left 113px
+
+.mt10
+	margin-top 10px
+
+.mt5
+	margin-top 5px
+
+.ml15
+	margin-left 15px
+
+.ml30
+	margin-left 40px
+
+.ml20
+	margin-left 20px
+
+.ml5
+	margin-left 5px
+
+.mb3
+	margin-bottom 3px
+
+.cd
+	cursor default
+
+.pa
+	position absolute
 
 .propostas
 	background-color #dcdcdc
@@ -45,30 +130,27 @@
 
 .lista-proposta
 	padding-right 3em
-	li 
+	li
 		font-size 1.1em
 .img-contato
 	width 3em
 	cursor pointer
 	margin-bottom 3px
 
-.fone
-	cursor pointer
-	margin-bottom 3px
-
 audio
 ::-webkit-media-controls-panel
-	background-color #000
+	background-color #222
 audio
 ::-moz-media-controls-panel
-	background-color #000
+	background-color #222
+/*
 audio
 ::-webkit-media-controls-volume-slider
 	background-color #f1f1f1
 audio
 ::-moz-media-controls-volume-slider
 	background-color #f1f1f1
-
+*/
 #map
 	height 400px
 	margin-top -5px
@@ -77,3 +159,25 @@ audio
 	position absolute
 	z-index 1000
 	width 25%
+
+.berlin
+	font-family 'berlin'
+
+.marca-slider
+	z-index 1000
+	background-color rgba(255,255,255, 0.9)
+	height 180px
+	width 220px
+	border-radius 50%
+	cursor default
+
+
+.navegation
+	color white !important
+	background-color #222 !important
+
+.page-scroll
+	color white !important
+
+.page-scroll:hover
+	color #999 !important
