--- a/Frontend/materials/partials/contact.hbs
+++ b/Frontend/materials/partials/contact.hbs
@@ -7,19 +7,18 @@
                 <p>De todas as formas, ser o representante da renovação do quadro legislativo municipal com QUALIDADE, pautado na ética e postura digna, respeitando e valorizando as pessoas.</p>
             </div>
             <div class="col-lg-4 text-center">
-                <i class="fa fa-phone fa-3x sr-contact fone"></i>
-                <p>(53) 8100-8288</p>
+                <i class="fa fa-phone fa-3x sr-contact cd mt3"></i>
+                <p class="cd">(53) 8100-8288</p>
             </div>
             <div class="col-lg-4 text-center">
-                <a href="mailto:danilo.optc@hotmail.com">
-                    <i class="fa fa-envelope-o fa-3x sr-contact fone"></i>
-                    <p>danilo.optc@hotmail.com</p>
+                <a href="mailto:danilorodrigues15@gmail.com">
+                    <i class="fa fa-envelope-o fa-3x sr-contact mt3"></i>
+                    <p>danilorodrigues15@gmail.com</p>
                 </a>
             </div>
             <div class="col-lg-4 text-center">
                 <a href="https://www.facebook.com/rodrigues.danilo15/" target="_blank">
                     <img src="Content/img/facebook.png" class="img-responsive center-block img-contato">
-
                     <p>Danilo Rodrigues</p>
                 </a>
             </div>
